263		C++			Restrict USA tag to explicit mappings only.  Many events don't work properly if USA is not in North America.
264		C++			Abstract and improve Daimyo-merging logic.  Add capability for user-defined nation merging (see merge_nations.txt).
265		C++			Restrict CNG tag to explicit mappings only; allocating it breaks the Congo Free State event.
266		C++			Additional country mapping improvements.
267		C++			Record the correct country tag in the capital mapping section of the log.  Failing to find EU3 nations for diplomatic agreements is not an error.
268		C++			Add many water province mappings, and allow navies to spawn in them.
269		C++			Map DW province 1853 (Kozani).  Give Epirus a country mapping.
270		C++			Set some starting CON (from serfdom/free-subj, culture, religion) and MIL (from stability, culture, religion) for pops.  Eventually need other factors (decisions, tolerance, buildings, modifiers) incorporated.
271		C++			Allow Mantua to map to Lombardia.
272		C++			Fix Yap Islands/Micronesia Sea mappings.
273		N/A			Clean up some stray files
274		ProvinceMapper		Introduce Province Mapper tool
275		ProvinceMapper		Handle new mappings files a bit better
276		ProvinceMapper		Make release builds work
277		C++			Add remaining sea and ocean mappings.
278		C++			Parse country data with the parser instead of ad-hoc. Add a missing linebreak to output.
279		C++			Literacy
280		C++			Initialize variable in log.cpp
281		C++			No longer log country mappings twice.
282		C++			Major update to DW province mappings.
283		C++			Code to handle null province mappings.
284		C++			Major update to HttT province mappings. Minor adjustments to DW mappings.
285		C++			Fixed an old bug with dead landless nations (some were just mostly dead, not all dead).
286		C++			Now remove enough older landless nations.
287		C++			Read certain settings (V2 directory, game type, etc) from configuration.txt
288		C++			Refactor reading of localized province names.